# sim-stream

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
crates/sim-lib-rank/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-rank/recipes/: book.toml
crates/sim-lib-rank/recipes/01-basics/: chapter.toml
crates/sim-lib-rank/recipes/01-basics/rank-retrieve/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-rank/recipes/01-basics/space-coordinate/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-rank/recipes/30-agents/: chapter.toml
crates/sim-lib-rank/recipes/30-agents/a30-018-recommendation/: expected.txt  purpose.md  recipe.toml  (+1 more)
crates/sim-lib-rank/src/: builder.rs  cap.rs  claims.rs  codec.rs  codec_fallback.rs  codec_fallback_tests.rs  codec_finite.rs  codec_group.rs  codec_group_core.rs  codec_group_list.rs  codec_group_product.rs  codec_group_tests.rs  codec_integer.rs  codec_primitive.rs  codec_tests.rs  context.rs  cookbook.rs  cookbook_runtime.rs  derive_support.rs  error.rs  expr.rs  expr_neighborhood.rs  expr_tests.rs  grade.rs  grade_compile.rs  grade_tests.rs  grade_util.rs  grammar.rs  lib.rs  limits.rs  lisp.rs  lisp_class.rs  meta.rs  metric.rs  metric_tests.rs  music.rs  music_support.rs  music_tests.rs  nat.rs  node.rs  (+26 more)
crates/sim-lib-rank/src/expr/: helpers.rs
crates/sim-lib-stream-audio/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-audio/recipes/: book.toml
crates/sim-lib-stream-audio/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-audio/src/: buffer.rs  citizen.rs  cookbook.rs  io.rs  lib.rs  spec.rs  spine.rs  tests.rs
crates/sim-lib-stream-clock/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-clock/recipes/: book.toml
crates/sim-lib-stream-clock/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-clock/src/: citizen.rs  clock.rs  cookbook.rs  instant.rs  lib.rs  tempo.rs  tests.rs
crates/sim-lib-stream-combinators/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-combinators/recipes/: book.toml
crates/sim-lib-stream-combinators/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-combinators/src/: bridge.rs  bridge_tests.rs  cell.rs  cookbook.rs  event_algebra.rs  event_algebra_tests.rs  lib.rs  ops.rs  recording.rs  stream.rs  tests.rs
crates/sim-lib-stream-combinators/src/ops/: nodes.rs
crates/sim-lib-stream-combinators/src/tests/: live_completion.rs
crates/sim-lib-stream-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-core/recipes/: book.toml
crates/sim-lib-stream-core/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-core/src/: bridge.rs  bridge_tests.rs  buffer.rs  cassette.rs  citizen.rs  cookbook.rs  dev.rs  dev_tests.rs  envelope.rs  inspector.rs  inspector_tests.rs  lib.rs  metadata.rs  packet.rs  read_construct.rs  security.rs  security_tests.rs  shape.rs  shape_tests.rs  site.rs  site_tests.rs  spine.rs  tests.rs  time.rs
crates/sim-lib-stream-core/src/cassette/: redaction.rs  stats.rs  timing.rs
crates/sim-lib-stream-core/src/envelope/: domain.rs  profile.rs  ref_codec.rs
crates/sim-lib-stream-core/src/packet/: pcm.rs
crates/sim-lib-stream-core/src/shape/: structural.rs
crates/sim-lib-stream-core/src/spine/: event_source.rs  queue.rs
crates/sim-lib-stream-core/src/tests/: codec.rs  envelope.rs  live_completion.rs  packet.rs  profile.rs
crates/sim-lib-stream-device/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-device/recipes/: book.toml
crates/sim-lib-stream-device/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-device/src/: citizen.rs  cookbook.rs  lib.rs  modeled.rs  sample.rs  sample_tests.rs
crates/sim-lib-stream-prelude/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-prelude/recipes/: book.toml
crates/sim-lib-stream-prelude/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-prelude/src/: cap.rs  card.rs  cookbook.rs  function.rs  handle.rs  lib.rs  live.rs  live_control.rs  spec.rs  tests.rs  transform.rs
crates/sim-lib-stream-prelude/src/function/: helpers.rs  symbols.rs
crates/sim-lib-stream-prelude/src/tests/: lazy.rs  live_catalog.rs  support.rs
crates/sim-lib-stream-wrist/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-wrist/recipes/: book.toml
crates/sim-lib-stream-wrist/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-wrist/src/: citizen.rs  cookbook.rs  lib.rs  modeled.rs  quorum.rs  quorum_tests.rs  worn.rs  worn_tests.rs
crates/sim-lib-stream-xr/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-xr/recipes/: book.toml
crates/sim-lib-stream-xr/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-xr/src/: camera.rs  citizen.rs  cookbook.rs  hand.rs  lib.rs  mic.rs  modeled.rs  pose.rs  tap.rs  wire.rs  xr_tests.rs
crates/sim-lib-topology/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-topology/recipes/: book.toml
crates/sim-lib-topology/recipes/01-basics/: chapter.toml
crates/sim-lib-topology/recipes/30-agents/: chapter.toml
crates/sim-lib-topology/src/: adapter.rs  browse.rs  capability.rs  citizen.rs  compile.rs  cookbook.rs  diagram.rs  error.rs  instrument.rs  lib.rs  model.rs  package.rs  parse.rs  patch.rs  place.rs  place_latency.rs  record.rs  reflect.rs  registry.rs  replay.rs  run.rs  run_cells.rs  run_contract.rs  run_nonlinear.rs  run_predicate.rs  site.rs  tests.rs  text.rs  validate.rs  verb.rs
crates/sim-lib-topology/src/adapter/: builtin.rs
crates/sim-lib-topology/src/browse/: examples.rs  specs.rs
crates/sim-lib-topology/src/parse/: common.rs  fields.rs  util.rs
crates/sim-lib-topology/src/patch/: data.rs
crates/sim-lib-topology/src/place/: model.rs
crates/sim-lib-topology/src/registry/: runtime.rs
crates/sim-lib-topology/src/tests/: browse.rs  compile.rs  control.rs  diagram.rs  instrument.rs  nonlinear.rs  package.rs  patch.rs  place.rs  reflect.rs  registry.rs  replay.rs  run_core.rs  site.rs  text.rs  validate.rs
crates/sim-lib-topology/src/text/: data.rs  parser.rs  value.rs
crates/sim-lib-topology/src/validate/: cycle.rs
(+45 files in other folders)
