[package]
name = "sim-lib-rank"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Coordinate, codec, order, search, and optional domain rank spaces."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-cookbook = { version = "0.1.0" }
num-bigint = "0.5"
sim-citizen = { version = "0.1.0" }
sim-codec-binary = { optional = true, version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.3", path = "../sim-lib-stream-core" }

[dev-dependencies]
sim-codec = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[features]
default = []
rank-codec-fallback = ["dep:sim-codec-binary"]
rank-expr = []
rank-learn = []
rank-music = []
rank-scatter = []

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
