[package]
name = "sim-lib-stream-audio"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "PCM source and sink adapters for SIM stream packets."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0", path = "../sim-lib-stream-core" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
