[package]
name = "sim-lib-stream-clock"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Clock charts and tick conversion helpers for STREAM 6."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0", path = "../sim-lib-stream-core" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
