[package]
name = "sim-lib-stream-combinators"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Lazy in-memory stream combinators for STREAM 6."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0", path = "../sim-lib-stream-core" }

[dev-dependencies]
sim-lib-stream-clock = { version = "0.1.0", path = "../sim-lib-stream-clock" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
