[package]
name = "sim-lib-stream-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Core stream metadata, packets, envelopes, and buffer values."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-shape = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-codec = { version = "0.1.0" }
sim-codec-binary = { version = "0.1.0" }
sim-codec-binary-base64 = { version = "0.1.0" }
sim-codec-json = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
