[package]
name = "sim-lib-stream-wrist"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Worn-device stream contracts and deterministic modeled wrist sources."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0", path = "../sim-lib-stream-core" }
sim-lib-stream-device = { version = "0.1.0", path = "../sim-lib-stream-device" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
