[package]
name = "sim-lib-topology"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Data-driven topology engine."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream"
homepage = "https://github.com/sim-nest/sim-stream"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0", path = "../sim-lib-stream-core" }
sim-shape = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-codec-binary = { version = "0.1.0" }
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[lints]
workspace = true
